Revert "path test"
This reverts commit 69e01fe06586c4e1b0f0aa000b641ae50e72b75a.

--- a/index.html
+++ b/index.html
@@ -191,13 +191,13 @@
 	
 <script  type="text/javascript" src="http://select2.github.io/select2/select2-3.5.3/select2.js"></script>
 <script  type="text/javascript" src="summernote.min.js"></script>
-<script type="text/javascript"  src="https://github.com/adenzil/blog/blob/gh-pages/backbone/model/moviemodel.jss" ></script>
-<script type="text/javascript"  src="https://github.com/adenzil/blog/blob/gh-pages/backbone/collection/collection.js" ></script>
-<script type="text/javascript"  src="https://github.com/adenzil/blog/blob/gh-pages/backbone/view/addview.js" ></script>
-<script type="text/javascript"  src="https://github.com/adenzil/blog/blob/gh-pages/backbone/view/mv.js" ></script>
-<script type="text/javascript"  src="https://github.com/adenzil/blog/blob/gh-pages/backbone/view/inputview.js" ></script>
-<script type="text/javascript"  src="https://github.com/adenzil/blog/blob/gh-pages/backbone/view/viewarticle.js" ></script>
-<script type="text/javascript"  src="https://github.com/adenzil/blog/blob/gh-pages/backbone/router/approuter.js" ></script>
+<script type="text/javascript"  src="/backbone/model/moviemodel.js" ></script>
+<script type="text/javascript"  src="/backbone/collection/collection.js" ></script>
+<script type="text/javascript"  src="/backbone/view/addview.js" ></script>
+<script type="text/javascript"  src="/backbone/view/mv.js" ></script>
+<script type="text/javascript"  src="/backbone/view/inputview.js" ></script>
+<script type="text/javascript"  src="/backbone/view/viewarticle.js" ></script>
+<script type="text/javascript"  src="/backbone/router/approuter.js" ></script>
 
 
 </body>
